<resources>
    <string name="app_name">ApnaBank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_req">Account No. <font color='#FF0000'>*</font></string>
    <string name="name_req">Name <font color='#FF0000'>*</font></string>
    <string name="IFSC_req">IFSC code <font color='#FF0000'>*</font></string>
    <string name="amount_req">Amount <font color='#FF0000'>*</font></string>
    <string name="gender_req">Gender <font color='#FF0000'>*</font></string>
    <string name="phone_req">Phone <font color='#FF0000'>*</font></string>
    <string name="email_req">Email <font color='#FF0000'>*</font></string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>

    </string-array>
</resources>