<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".AddCustomerFragment">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
             <LinearLayout
                 android:id="@+id/customer_detail"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:gravity="center"
                 android:padding="20dp"
                 android:orientation="vertical"
                 >
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/information"
                     android:layout_margin="5dp"/>
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:hint="@string/name_req"
                     >
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/customer_Name"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:inputType="textAutoComplete|textCapWords"
                         style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:hint="@string/account_req">
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/account_No"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:inputType="number"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:hint="@string/IFSC_req">
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/ifsc_Code"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:inputType="textAutoComplete|textCapWords"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_margin="5dp"
                         android:hint="@string/amount_req"
                         android:layout_weight="1">
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/amount"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:inputType="numberDecimal"
                             />
                     </com.google.android.material.textfield.TextInputLayout>
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_margin="5dp"
                         android:layout_weight="1"
                         android:hint="@string/gender_req"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                         <AutoCompleteTextView
                             android:id="@+id/gender_tv"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:inputType="textAutoComplete|textCapWords"

                             />
                     </com.google.android.material.textfield.TextInputLayout>


                 </LinearLayout>
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:hint="@string/phone_req">
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/phone_No"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:inputType="textAutoComplete|textCapWords"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:hint="@string/email_req">
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/email"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:inputType="textAutoComplete|textCapWords"
                         />
                 </com.google.android.material.textfield.TextInputLayout>



             </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/customer_detail">
                    <Button
                        android:id="@+id/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Cancel"
                        android:layout_margin="10dp"
                        android:backgroundTint="#EF4031"/>
                    <Button
                        android:id="@+id/add_Customer"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="ADD"
                        android:layout_margin="10dp"
                        android:backgroundTint="#60E60C"/>
                </LinearLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>